--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,21 @@
-# vscode
-.vscode 
-
-# Intellij
-*.iml
-.idea
-
-# npm
+.DS_Store
 node_modules
 
-# Don't include the compiled main.js file in the repo.
-# They should be uploaded to GitHub releases instead.
-main.js
+# local env files
+.env.local
+.env.*.local
 
-# Exclude sourcemaps
-*.map
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# obsidian
-data.json
-
-# Exclude macOS Finder (System Explorer) View States
-.DS_Store
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
