--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,22 +3,25 @@
     "baseUrl": ".",
     "inlineSourceMap": true,
     "inlineSources": true,
-    "module": "ESNext",
-    "target": "ES6",
+    "module": "esnext",
+    "target": "esnext",
+    "strict": true,
     "allowJs": true,
     "noImplicitAny": true,
     "moduleResolution": "node",
     "importHelpers": true,
     "isolatedModules": true,
-	"strictNullChecks": true,
+	  "strictNullChecks": true,
+    "noUnusedLocals": true,
     "lib": [
       "DOM",
-      "ES5",
-      "ES6",
-      "ES7"
-    ]
+      "esnext"
+    ],
   },
   "include": [
     "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
   ]
 }
